--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -387,7 +387,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                     vmcs_write32();
                     vmcs_write64(); // 一堆写入vmcs, 使用vmwrite指令
                     vmx_set_constant_host_state(vmx); // 设置host-state常量
-                        vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit); //vmexit后vmm的入口地址
+                        vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit); //vmexit后vmm的入口地址, 这里面是个ret, 详细说明见下面VCPU_RUN
                 vmx_vcpu_put();
                     vmx_vcpu_pi_put();
                     vmx_prepare_switch_to_host(); // 
@@ -1491,12 +1491,7 @@ out:
 }
 ```
 
-Guest代码执行到**敏感指令**或因**其他原因**(比如中断/异常)，**VM-Exit退出非根模式**，返回到`vcpu_enter_guest`函数继续执行。
-
-vcpu_enter_guest函数中会判断VM-Exit原因，并进行相应处理。
-
-处理完成后VM-Entry到Guest重新执行Guest代码，或重新等待下次调度。
-
+见上面注释, 调用架构相关的run接口(vmx_vcpu_run)，进入Guest模式
 
 ```cpp
 /*
@@ -1685,10 +1680,7 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
 }
 ```
 
-Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会引发VM Exit。Guest Exit Reason保存在MSR寄存器中。 `arch/x86/kvm/vmx.c:kvm_vmx_exit_handlers` 定义了guest Exit的**内核处理函数**。 例如 `[EXIT_REASON_CR_ACCESS] = handle_cr`, 当Guest OS访问cr寄存器时，即会产生 VM Exit，将控制权交予kvm，调用`handle_cr`处理。对应到**KVM**就是`vCPU->kvm_run->exit_reason`。KVM根据`exit_reason`做相应的处理。 
-
-**VM Exit退出的代码**是`vmx.c:vmx_vcpu_run`函数**后半段开始执行**，执行路径与**vm entry相反**，一层层**回调处理**到qemu-kvm中的`kvm_exec_cpu`
-
+调用`__vmx_vcpu_run`进入虚拟化模式, 这是一段汇编代码, 如下.
 
 ```assembly
 /**
@@ -1725,7 +1717,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
          * Save @regs, _ASM_ARG2 may be modified by vmx_update_host_rsp() and
          * @regs is needed after VM-Exit to save the guest's register values.
          */
-        // 保存虚拟机vcpu寄存器
+        // 压栈保存虚拟机vcpu寄存器
         push %_ASM_ARG2
         // 拷贝 @launched到bl
         /* Copy @launched to BL, _ASM_ARG3 is volatile. */
@@ -1843,6 +1835,7 @@ SYM_FUNC_START(__vmx_vcpu_run)
         pop %esi
         pop %edi
 #endif
+        // 原有host的堆栈恢复, 栈底恢复
         pop %_ASM_BP
         // 返回
         ret
@@ -1852,7 +1845,14 @@ SYM_FUNC_START(__vmx_vcpu_run)
 2:      mov $1, %eax
         jmp 1b
 SYM_FUNC_END(__vmx_vcpu_run)
+```
 
+这里逻辑主要是
+
+1. 保护host原有堆栈, 将栈底指针寄存器RBP压栈保存, 将栈顶(RSP)设为栈底(RBP)
+2.
+
+```cpp
 void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
 {
         if (unlikely(host_rsp != vmx->loaded_vmcs->host_state.rsp)) {
@@ -1860,7 +1860,9 @@ void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
                 vmcs_writel(HOST_RSP, host_rsp);
         }
 }
+```
 
+```
 /**
  * vmx_vmenter - VM-Enter the current loaded VMCS
  *
@@ -1896,3 +1898,16 @@ SYM_FUNC_START(vmx_vmenter)
 
 SYM_FUNC_END(vmx_vmenter)
 ```
+
+
+Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会引发VM Exit。Guest Exit Reason保存在MSR寄存器中。 `arch/x86/kvm/vmx.c:kvm_vmx_exit_handlers` 定义了guest Exit的**内核处理函数**。 例如 `[EXIT_REASON_CR_ACCESS] = handle_cr`, 当Guest OS访问cr寄存器时，即会产生 VM Exit，将控制权交予kvm，调用`handle_cr`处理。对应到**KVM**就是`vCPU->kvm_run->exit_reason`。KVM根据`exit_reason`做相应的处理。 
+
+**VM Exit退出的代码**是`vmx.c:vmx_vcpu_run`函数**后半段开始执行**，执行路径与**vm entry相反**，一层层**回调处理**到qemu-kvm中的`kvm_exec_cpu`
+
+
+
+Guest代码执行到**敏感指令**或因**其他原因**(比如中断/异常)，**VM-Exit退出非根模式**，返回到`vcpu_enter_guest`函数继续执行。
+
+vcpu_enter_guest函数中会判断VM-Exit原因，并进行相应处理。
+
+处理完成后VM-Entry到Guest重新执行Guest代码，或重新等待下次调度。
