--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1699,8 +1699,8 @@ SYM_FUNC_START(__vmx_vcpu_run)
         push %_ASM_BP
         // 将栈顶设为栈底, 所以栈底和栈顶指针相等了, 不会影响以前栈的数据
         mov  %_ASM_SP, %_ASM_BP
-        // rbx，rbp，r12，r13，14，15 都是数据存储寄存器
-        // 被调用者随便用, 在调用子函数之前要备份它，以防他被修改, 这些保存/恢复是因为处理器不会自动存储?
+        // rbx，rbp！！！，r12，r13，r14，r15 都是数据存储寄存器
+        // 被调用者随便用, 在调用子函数之前要备份它，以防他被修改
 #ifdef CONFIG_X86_64
         push %r15
         push %r14
@@ -1849,18 +1849,12 @@ SYM_FUNC_END(__vmx_vcpu_run)
 
 这里逻辑主要是
 
-1. 保护host原有堆栈, 将栈底指针寄存器RBP压栈保存, 将栈顶(RSP)设为栈底(RBP)
-2.
-
-```cpp
-void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
-{
-        if (unlikely(host_rsp != vmx->loaded_vmcs->host_state.rsp)) {
-                vmx->loaded_vmcs->host_state.rsp = host_rsp;
-                vmcs_writel(HOST_RSP, host_rsp);
-        }
-}
-```
+1. 保护host原有堆栈, 将栈底指针寄存器RBP压栈保存, 将栈顶(RSP)设为栈底(RBP), 所以不会影响原有host的堆栈
+2. rbx，rbp(第一步)，r12，r13，r14，r15(x32对应的是edi, esi)数据寄存器压栈保存, 因为这些都可以使用
+3. 压栈保存虚拟机vcpu寄存器
+4. 加载虚拟机vcpu寄存器到物理寄存器
+5. 执行`call vmx_vmenter`进入guest模式, 见下面汇编
+6. 在之前创建vcpu时候, 有代码`vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit);`设置了`vm-exit`后host的入口地址, 具体代码如下(其实就是一个ret)
 
 ```
 /**
@@ -1897,8 +1891,20 @@ SYM_FUNC_START(vmx_vmenter)
         _ASM_EXTABLE(2b, 3b)
 
 SYM_FUNC_END(vmx_vmenter)
+
+
 ```
 
+
+```cpp
+void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
+{
+        if (unlikely(host_rsp != vmx->loaded_vmcs->host_state.rsp)) {
+                vmx->loaded_vmcs->host_state.rsp = host_rsp;
+                vmcs_writel(HOST_RSP, host_rsp);
+        }
+}
+```
 
 Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会引发VM Exit。Guest Exit Reason保存在MSR寄存器中。 `arch/x86/kvm/vmx.c:kvm_vmx_exit_handlers` 定义了guest Exit的**内核处理函数**。 例如 `[EXIT_REASON_CR_ACCESS] = handle_cr`, 当Guest OS访问cr寄存器时，即会产生 VM Exit，将控制权交予kvm，调用`handle_cr`处理。对应到**KVM**就是`vCPU->kvm_run->exit_reason`。KVM根据`exit_reason`做相应的处理。 
 
