--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1854,7 +1854,9 @@ SYM_FUNC_END(__vmx_vcpu_run)
 3. 压栈保存虚拟机vcpu寄存器
 4. 加载虚拟机vcpu寄存器到物理寄存器
 5. 执行`call vmx_vmenter`进入guest模式, 见下面汇编
-6. 在之前创建vcpu时候, 有代码`vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit);`设置了`vm-exit`后host的入口地址, 具体代码如下(其实就是一个ret)
+6. 在之前创建vcpu时候, 有代码`vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit);`设置了`vm-exit`后host的入口地址, 具体代码如下(其实就是一个ret), 这里涉及到了call和ret汇编
+7. 执行到这里要么因为VM-Fail要么是虚拟机VM-exit, 而VM-Fail表明没有执行任何虚拟机指令
+8. 虚拟机vm-exit的话, 先保存所有vcpu寄存器到vcpu结构, 再加载恢复host那些数据寄存器, 然后返回
 
 ```
 /**
@@ -1892,8 +1894,33 @@ SYM_FUNC_START(vmx_vmenter)
 
 SYM_FUNC_END(vmx_vmenter)
 
+/**
+ * vmx_vmexit - Handle a VMX VM-Exit
+ *
+ * Returns:
+ *      %RFLAGS.{CF,ZF} are cleared on VM-Success, i.e. VM-Exit
+ *
+ * This is vmx_vmenter's partner in crime.  On a VM-Exit, control will jump
+ * here after hardware loads the host's state, i.e. this is the destination
+ * referred to by VMCS.HOST_RIP.
+ */
+SYM_FUNC_START(vmx_vmexit)
+#ifdef CONFIG_RETPOLINE
+        ALTERNATIVE "jmp .Lvmexit_skip_rsb", "", X86_FEATURE_RETPOLINE
+        /* Preserve guest's RAX, it's used to stuff the RSB. */
+        push %_ASM_AX
 
+        /* IMPORTANT: Stuff the RSB immediately after VM-Exit, before RET! */
+        FILL_RETURN_BUFFER %_ASM_AX, RSB_CLEAR_LOOPS, X86_FEATURE_RETPOLINE
+
+        pop %_ASM_AX
+.Lvmexit_skip_rsb:
+#endif
+        ret
+SYM_FUNC_END(vmx_vmexit)
 ```
+
+在执行`call vmx_vmenter`时候会将当前ip压栈(即下一条指令`jbe 2f`), 在`vmx_vmenter`中会进入虚拟机模式, 当虚拟机vm-exit时候, 会调用到`vmx_vmexit`, 而这里面是一个`ret`, 会执行`pop ip`, 从而在这里虚拟机vm-exit后会执行
 
 
 ```cpp
@@ -1905,6 +1932,9 @@ void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
         }
 }
 ```
+
+
+
 
 Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会引发VM Exit。Guest Exit Reason保存在MSR寄存器中。 `arch/x86/kvm/vmx.c:kvm_vmx_exit_handlers` 定义了guest Exit的**内核处理函数**。 例如 `[EXIT_REASON_CR_ACCESS] = handle_cr`, 当Guest OS访问cr寄存器时，即会产生 VM Exit，将控制权交予kvm，调用`handle_cr`处理。对应到**KVM**就是`vCPU->kvm_run->exit_reason`。KVM根据`exit_reason`做相应的处理。 
 
