--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1920,7 +1920,7 @@ SYM_FUNC_START(vmx_vmexit)
 SYM_FUNC_END(vmx_vmexit)
 ```
 
-在执行`call vmx_vmenter`时候会将当前ip压栈(即下一条指令`jbe 2f`), 在`vmx_vmenter`中会进入虚拟机模式, 当虚拟机vm-exit时候, 会调用到`vmx_vmexit`, 而这里面是一个`ret`, 会执行`pop ip`, 从而在这里虚拟机vm-exit后会执行
+在执行`call vmx_vmenter`时候会将当前ip压栈(即下一条指令`jbe 2f`), 在`vmx_vmenter`中会进入虚拟机模式, 当虚拟机vm-exit时候, 会调用到`vmx_vmexit`, 而这里面是一个`ret`, 会执行`pop ip`, 从而在这里虚拟机vm-exit后会执行`call vmx_vmenter`的下一条指令(`jbe 2f`). 总结来说, 本质上就是先进行函数调用进入虚拟机模式, 然后在`vm-exit`后从这个函数返回, 也就是整个流程都是在一个函数中.
 
 
 ```cpp
