--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1664,7 +1664,7 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
 
         vmx->nested.nested_run_pending = 0;
         vmx->idt_vectoring_info = 0;
-
+        // vm->exit_reason
         vmx->exit_reason = vmx->fail ? 0xdead : vmcs_read32(VM_EXIT_REASON);
         if ((u16)vmx->exit_reason == EXIT_REASON_MCE_DURING_VMENTRY)
                 kvm_machine_check();
@@ -1673,8 +1673,9 @@ static void vmx_vcpu_run(struct kvm_vcpu *vcpu)
                 return;
         // 设置已经vmlaunch
         vmx->loaded_vmcs->launched = 1;
+        // 从硬件VMCS中读取中断向量表信息
         vmx->idt_vectoring_info = vmcs_read32(IDT_VECTORING_INFO_FIELD);
-
+        /*处理MCE异常和NMI中断*/
         vmx_recover_nmi_blocking(vmx);
         vmx_complete_interrupts(vmx);
 }
@@ -1932,8 +1933,6 @@ void vmx_update_host_rsp(struct vcpu_vmx *vmx, unsigned long host_rsp)
         }
 }
 ```
-
-
 
 
 Guest OS运行在VMX non-root模式中，当执行默写特权执行时，则会引发VM Exit。Guest Exit Reason保存在MSR寄存器中。 `arch/x86/kvm/vmx.c:kvm_vmx_exit_handlers` 定义了guest Exit的**内核处理函数**。 例如 `[EXIT_REASON_CR_ACCESS] = handle_cr`, 当Guest OS访问cr寄存器时，即会产生 VM Exit，将控制权交予kvm，调用`handle_cr`处理。对应到**KVM**就是`vCPU->kvm_run->exit_reason`。KVM根据`exit_reason`做相应的处理。 
