--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/4. IO虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/4. IO虚拟化.md
@@ -4,6 +4,8 @@
 <!-- code_chunk_output -->
 
 - [1. 概述](#1-概述)
+  - [IO相关资源](#io相关资源)
+  - [IO虚拟化](#io虚拟化)
 - [2. 设备发现](#2-设备发现)
 - [3. 访问截获](#3-访问截获)
   - [3.1. Port I/O](#31-port-io)
@@ -26,7 +28,19 @@
 
 # 1. 概述
 
-没有虚拟化的情形下. 给定一个外设, 定义有自己的一套供软件访问的接口, 这些接口的属性可能是单向的, 也可能是双向的. OS有外设的驱动, 它们接收来自其他模块(如用户进程)的请求, 然后按照外设规定好的方式驱动外设完成特定任务.驱动不关心外设的逻辑电路, 只要按照定义好的接口使用外设, 外设总会通过其内部逻辑电路完成动作. 由于处理器的核心地位, 因此外设的访问接口最终也会被映射为处理器所能认识的地址空间或其他资源. 这样, 当驱动通过指令方式访问外设, 处理器才能正确识别目标对象, 然后将相关请求发送到系统总线上, 最终由芯片组转发给目标外设. 下图是典型设备可能有的资源.
+## IO相关资源
+
+先讨论没有虚拟化情形下的IO.
+
+1. 外设接口. 给定一个**外设**, 定义有自己的一套供**软件访问的接口**, 这些接口的属性可能是**单向的**, 也可能是**双向的**. 
+
+2. OS驱动. OS有**外设的驱动**, 它们接收来自**其他模块(如用户进程)的请求**, 然后按照**外设规定好的方式**驱动外设完成特定任务. 驱动**不关心**外设的逻辑电路, 只要按照**定义好的接口**使用外设, **外设**总会通过其**内部逻辑电路**完成动作. 
+
+3. 地址空间或其他资源: 由于**处理器的核心地位**, 因此**外设的访问接口**最终也会被**映射**为**处理器**所能认识的**地址空间或其他资源**. 
+
+这样, 当**驱动**通过**指令方式**访问外设, 处理器才能正确识别目标对象, 然后将相关请求发送到系统总线上, 最终由芯片组转发给目标外设. 
+
+下图是典型设备可能有的资源.
 
 ![config](./images/6.png)
 
@@ -37,6 +51,11 @@
 ⓷ 中断. 由于外设的物理构造, 速度远低于处理器, 往往通过一步时间通知的方式来完成延后的操作, 这个通知机制通常是中断模块实现. 每个允许发生中断的外设会在处理器的中断向量空间分配一个序号.
 
 **I/O端口**、**MMIO**和**中断模块**组成了一个**典型外设提供给软件(！！！这些都是外设的！！！**)的基本资源。图中还有一个外设中的特殊模块 --- DMA模块. DMA提供给设备不经处理器而直接访问内存的方式, 从而特别适合大批量数据的批量传输. 从访问方式来说, **DMA模块！！！**被映射在**I/O端口或MMIO中！！！**.
+
+## IO虚拟化
+
+从**处理器**的角度看，**外设**是通过**一组I/O资源（port I/O或者是MMIO**）来进行**访问**的，所以**设备的相关虚拟化**被称为**I/O虚拟化**。其思想就是**VMM截获客户操作系统对设备的访问请求**，然后通过**软件的方式来模拟真实设备的效果**。基于设备类型的多样化，I/O虚拟化的方式和特点纷繁复杂。
+
 
 在虚拟环境中, I/O面临的问题是: 外设资源有限, 为满足多个客户机OS需求, VMM必须通过I/O虚拟化方式复用有限的外设资源. VMM截获客户OS对设备的访问请求, 然后通过软件方式模拟真实设备. 从处理器角度看, 外设是通过一组I/O资源(端口I/O或MMIO)来进行访问的, 所以设备相关的虚拟化又被称为I/O虚拟化. 
 
