--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/4. IO虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/4. IO虚拟化.md
@@ -4,8 +4,9 @@
 <!-- code_chunk_output -->
 
 - [1. 概述](#1-概述)
-  - [IO相关资源](#io相关资源)
-  - [IO虚拟化](#io虚拟化)
+  - [1.1. IO的基本描述](#11-io的基本描述)
+  - [1.2. IO设备的资源](#12-io设备的资源)
+  - [1.3. IO虚拟化](#13-io虚拟化)
 - [2. 设备发现](#2-设备发现)
 - [3. 访问截获](#3-访问截获)
   - [3.1. Port I/O](#31-port-io)
@@ -28,7 +29,7 @@
 
 # 1. 概述
 
-## IO相关资源
+## 1.1. IO的基本描述
 
 先讨论没有虚拟化情形下的IO.
 
@@ -38,28 +39,29 @@
 
 3. 地址空间或其他资源: 由于**处理器的核心地位**, 因此**外设的访问接口**最终也会被**映射**为**处理器**所能认识的**地址空间或其他资源**. 
 
-这样, 当**驱动**通过**指令方式**访问外设, 处理器才能正确识别目标对象, 然后将相关请求发送到系统总线上, 最终由芯片组转发给目标外设. 
+这样, 当**驱动**通过**指令方式**访问外设, 处理器才能**正确识别目标对象**, 然后将**相关请求**发送到**系统总线**上, 最终由**芯片组**转发给目标外设. 
+
+## 1.2. IO设备的资源
 
 下图是典型设备可能有的资源.
 
 ![config](./images/6.png)
 
-⓵ I/O端口寄存器. 它被映射到I/O地址空间中, 由特殊指令IN/OUT访问. 若指令流处于最高特权级, 整个64KB的I/O地址空间都可自由访问, 驱动程序就是; 当指令流运行在其它特权级, 只有I/O位图允许的端口才能访问.
+⓵ **I/O端口寄存器**. 它被映射到**I/O地址空间**中, 由特殊指令IN/OUT访问. 若指令流处于最高特权级, 整个64KB的I/O地址空间都可自由访问, 驱动程序就是; 当指令流运行在其它特权级, 只有I/O位图允许的端口才能访问.
 
-⓶ MMIO寄存器. 被映射到物理地址空间, 通过页表方式控制访问权限.
+⓶ **MMIO寄存器**. 被映射到**物理地址空间**, 通过页表方式控制访问权限.
 
-⓷ 中断. 由于外设的物理构造, 速度远低于处理器, 往往通过一步时间通知的方式来完成延后的操作, 这个通知机制通常是中断模块实现. 每个允许发生中断的外设会在处理器的中断向量空间分配一个序号.
+⓷ **中断**. 由于外设的物理构造, 速度远低于处理器, 往往通过一步时间通知的方式来完成延后的操作, 这个通知机制通常是中断模块实现. 每个允许发生中断的外设会在处理器的中断向量空间分配一个序号.
 
-**I/O端口**、**MMIO**和**中断模块**组成了一个**典型外设提供给软件(！！！这些都是外设的！！！**)的基本资源。图中还有一个外设中的特殊模块 --- DMA模块. DMA提供给设备不经处理器而直接访问内存的方式, 从而特别适合大批量数据的批量传输. 从访问方式来说, **DMA模块！！！**被映射在**I/O端口或MMIO中！！！**.
+**I/O端口**、**MMIO**和**中断模块**组成了一个**典型外设提供给软件(！！！这些都是外设的！！！**)的**基本资源**。图中还有一个外设中的特殊模块 --- DMA模块. 
 
-## IO虚拟化
+⓸ **DMA模块**. DMA提供给**设备不经处理器**而**直接访问内存**的方式, 从而特别适合**大批量数据**的批量传输. 从**访问方式**来说, **DMA模块！！！**被映射在**I/O端口或MMIO中！！！**.
 
-从**处理器**的角度看，**外设**是通过**一组I/O资源（port I/O或者是MMIO**）来进行**访问**的，所以**设备的相关虚拟化**被称为**I/O虚拟化**。其思想就是**VMM截获客户操作系统对设备的访问请求**，然后通过**软件的方式来模拟真实设备的效果**。基于设备类型的多样化，I/O虚拟化的方式和特点纷繁复杂。
+## 1.3. IO虚拟化
 
+从**处理器**角度看, **外设**是通过**一组I/O资源(端口I/O或MMIO**)来进行**访问**的, 所以**设备相关的虚拟化**又被称为**I/O虚拟化**. 在虚拟环境中, I/O面临的问题是: **外设资源有限**, 为满足**多个客户机OS**需求, VMM必须通过I/O虚拟化方式**复用有限的外设资源**. VMM截获客户OS对设备的访问请求, 然后通过软件方式模拟真实设备. 
 
-在虚拟环境中, I/O面临的问题是: 外设资源有限, 为满足多个客户机OS需求, VMM必须通过I/O虚拟化方式复用有限的外设资源. VMM截获客户OS对设备的访问请求, 然后通过软件方式模拟真实设备. 从处理器角度看, 外设是通过一组I/O资源(端口I/O或MMIO)来进行访问的, 所以设备相关的虚拟化又被称为I/O虚拟化. 
-
-I/O虚拟化不需要完整虚拟化出所有外设的所有接口. 怎么做取决于设备与VMM的策略以及客户机OS的需求.
+I/O虚拟化**不需要完整虚拟化**出所有外设的所有接口. 怎么做取决于设备与VMM的策略以及客户机OS的需求.
 
 ⓵ 虚拟芯片组. 基于VMM实现上考虑, 这个虚拟芯片组还可承担ACPI电源管理相关的一些功能.
 
