--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -26,10 +26,16 @@ y = 1;
 // thread 1
 while(!ok);
 do(x);
+
 // thread 2
 x = 42;
 ok = 1;
 ```
+
+ok初始化为0， 线程1等待ok被设置为1后执行do函数。假如，**线程2**对内存的**写操作乱序执行**，也就是**x赋值晚于ok赋值**完成，那么do函数接受的实参很有可能出乎开发者的意料，不为42。
+
+我们可以引入内存屏障来避免上述问题的出现。内存屏障能让**CPU或者编译器**在**内存访问上有序**。一个内存屏障之前的内存访问操作必定先于其之后的完成。内存屏障包括两类：**编译器屏障**和**CPU内存屏障**。
+
 
 
 
