--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -116,6 +116,8 @@ void f()
 
 SMP架构需要内存屏障的进一步解释：从体系结构上来看，首先在SMP架构下，每个CPU与内存之间，都配有自己的高速缓存（Cache），以减少访问内存时的冲突
 
+![2020-04-17-12-26-15.png](./images/2020-04-17-12-26-15.png)
+
 
 
 # 参考
