--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
@@ -465,9 +465,9 @@ QEMU邮件列表的说明可参考 http://wiki.qemu.org/MailingLists 。
 
 除了邮件列表之外，
 
-KVM的IRC讨论方式为：在irc.freenode.net服务器上的“\#kvm”频道；
+KVM的IRC讨论方式为：在irc.freenode.net服务器上的“`#kvm`”频道；
 
-QEMU的IRC讨论方式为：在irc.oftc.net服务器上的“\#qemu”频道。
+QEMU的IRC讨论方式为：在irc.oftc.net服务器上的“`#qemu`”频道。
 
 ## 3.2. 代码风格
 
