--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -112,11 +112,37 @@ void f()
 
 # 运行时内存乱序访问
 
-运行时，CPU本身是会乱序执行指令的。早期的处理器为有序处理器（in-order processors）,总是按开发者编写的顺序执行指令，如果指令的输入操作对象（input operands）不可用（通常由于需要从内存中获取），那么处理器不会转而执行那些输入操作对象可用的指令，而是等待当前输入操作对象可用。相比之下，乱序处理器（out-of-order processors）会先处理那些有可用输入操作对象的指令（而非顺序执行）从而避免了等待，提高了效率。现代计算机上，处理器运行的速度比内存快很多，有序处理器花在等待可用数据的时间里已可处理大量指令了。即便现代处理器会乱序执行，但在单个CPU上，指令能通过指令队列顺序获取并执行，结果利用队列顺序返回寄存器堆（详情可参考 http://en.wikipedia.org/wiki/Out-of-order_execution ），这使得程序执行时所有的内存访问操作看起来像是按程序代码编写的顺序执行的，因此内存屏障是没有必要使用的（前提是不考虑编译器优化的情况下）。
+运行时，CPU本身是会乱序执行指令的。早期的处理器为有序处理器（in-order processors）,总是按开发者编写的顺序执行指令，如果指令的输入操作对象（input operands）不可用（通常由于需要从内存中获取），那么处理器不会转而执行那些输入操作对象可用的指令，而是等待当前输入操作对象可用。相比之下，**乱序处理器**（`out-of-order processors`）会先处理那些有**可用输入操作对象**的指令（而非顺序执行）从而避免了等待，提高了效率。现代计算机上，处理器运行的速度比内存快很多，有序处理器花在等待可用数据的时间里已可处理大量指令了。即便现代处理器会**乱序执行**，但在**单个CPU上**，指令能通过**指令队列顺序获取并执行**，结果利用**队列顺序返回寄存器堆**（详情可参考 http://en.wikipedia.org/wiki/Out-of-order_execution ），这使得程序执行时所有的内存访问操作看起来像是按程序**代码编写的顺序执行**的，因此内存屏障是没有必要使用的（前提是不考虑编译器优化的情况下）。
 
-SMP架构需要内存屏障的进一步解释：从体系结构上来看，首先在SMP架构下，每个CPU与内存之间，都配有自己的高速缓存（Cache），以减少访问内存时的冲突
+SMP架构需要内存屏障的进一步解释：从体系结构上来看，首先在**SMP架构**下，每个CPU与内存之间，都配有自己的高速缓存（Cache），以减少访问内存时的冲突
 
 ![2020-04-17-12-26-15.png](./images/2020-04-17-12-26-15.png)
+
+采用**高速缓存**的**写操作**有两种模式：
+
+(1). **穿透(Write through)模式**，每次写时，都**直接将数据写回内存**中，效率相对较低；
+
+(2). **回写(Write back)模式**，写的时候先写回告诉缓存，然后由**高速缓存的硬件**再周转**复用缓冲线**(Cache Line)时自动将数据写回内存，或者由软件主动地“冲刷”有关的缓冲线(Cache Line)。
+
+出于性能的考虑，系统往往采用的是**模式2**来完成**数据写入**。正是由于存在**高速缓存**这一层，正是由于采用了`Write back`模式的数据写入，才导致在**SMP架构**下，对高速缓存的运用可能改变对内存操作的顺序。
+
+以上面的一个简短代码为例：
+
+```cpp
+// thread 0 -- 在CPU0上运行
+x = 42;
+ok = 1;
+
+// thread 1 – 在CPU1上运行
+while(!ok);
+print(x);
+```
+
+这里CPU1执行时， **x一定是打印出42**吗？让我们来看看以下图为例的说明：
+
+![2020-04-17-14-37-22.png](./images/2020-04-17-14-37-22.png)
+
+
 
 
 
