--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -142,9 +142,13 @@ print(x);
 
 ![2020-04-17-14-37-22.png](./images/2020-04-17-14-37-22.png)
 
-假设, 正好**CPU0的高速缓存**中有**x**, 此时**CPU0**仅仅是将**x=42**写入到了**高速缓存中**，另外一个ok也在高速缓存中，但由于周转复用高速缓冲线（Cache Line）而导致将ok=1刷会到了内存中，此时CPU1首先执行对ok内存的读取操作，他读到了ok为1的结果，进而跳出循环，读取x的内容，而此时，由于实际写入的x(42)还只在CPU0的高速缓存中，导致CPU1读到的数据为x(17)。程序中编排好的内存访问顺序（指令序： program ordering）是先写入x，再写入y。而实际上出现在该CPU外部，即系统总线上的次序（处理器序： processor ordering），却是先写入y，再写入x(这个例子中x还未写入)。在SMP架构中，每个CPU都只知道自己何时会改变内存的内容，但是都不知道别的CPU会在什么时候改变内存的内容，也不知道自己本地的高速缓存中的内容是否与内存中的内容不一致。反过来，每个CPU都可能因为改变了内存内容，而使得其他CPU的高速缓存变的不一致了。在SMP架构下，由于高速缓存的存在而导致的内存访问次序（读或写都有可能书序被改变）的改变很有可能影响到CPU间的同步与互斥。因此需要有一种手段，使得在某些操作之前，把这种“欠下”的内存操作（本例中的x=42的内存写入）全都最终地、物理地完成，就好像把欠下的债都结清，然后再开始新的（通常是比较重要的）活动一样。这种手段就是内存屏障，其本质原理就是对系统总线加锁。
+假设, 正好**CPU0的高速缓存**中有**x**, 此时**CPU0**仅仅是将**x=42**写入到了**高速缓存中**，另外一个**ok也在高速缓存**中，但由于**周转复用高速缓冲线**（Cache Line）而导致将**ok=1刷回到了内存**中，此时**CPU1**首先执行**对ok内存的读取操作**，他读到了**ok为1的结果**，进而**跳出循环**，读取**x的内容**，而此时，由于**实际写入的x(42**)还只在**CPU0的高速缓存**中，导致**CPU1读到的数据为x(17**)。
 
+**程序**中编排好的**内存访问顺序**（**指令序**： program ordering）是**先写入x**，**再写入y**。而实际上出现在该CPU外部，即**系统总线上的次序**（**处理器序**： processor ordering），却是**先写入y**，**再写入x**(这个例子中x还未写入)。
 
+在SMP架构中，**每个CPU**都只知道**自己何时会改变内存**的内容，但是都**不知道别的CPU**会在**什么时候改变内存**的内容，也不知道**自己本地的高速缓存**中的内容是否与**内存**中的**内容不一致**。反过来，每个CPU都可能因为改变了内存内容，而使得其他CPU的高速缓存变的不一致了。在SMP架构下，由于高速缓存的存在而导致的内存访问次序（读或写都有可能书序被改变）的改变很有可能影响到CPU间的同步与互斥。因此需要有一种手段，使得在某些操作之前，把这种“欠下”的内存操作（本例中的x=42的内存写入）全都最终地、物理地完成，就好像把欠下的债都结清，然后再开始新的（通常是比较重要的）活动一样。这种手段就是内存屏障，其本质原理就是对系统总线加锁。
+
+回过头来, 
 
 
 # 参考
