--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -112,9 +112,13 @@ void f()
 
 # 运行时内存乱序访问
 
-运行时，CPU本身是会乱序执行指令的。早期的处理器为有序处理器（in-order processors）,总是按开发者编写的顺序执行指令，如果指令的输入操作对象（input operands）不可用（通常由于需要从内存中获取），那么处理器不会转而执行那些输入操作对象可用的指令，而是等待当前输入操作对象可用。相比之下，**乱序处理器**（`out-of-order processors`）会先处理那些有**可用输入操作对象**的指令（而非顺序执行）从而避免了等待，提高了效率。现代计算机上，处理器运行的速度比内存快很多，有序处理器花在等待可用数据的时间里已可处理大量指令了。即便现代处理器会**乱序执行**，但在**单个CPU上**，指令能通过**指令队列顺序获取并执行**，结果利用**队列顺序返回寄存器堆**（详情可参考 http://en.wikipedia.org/wiki/Out-of-order_execution ），这使得程序执行时所有的内存访问操作看起来像是按程序**代码编写的顺序执行**的，因此内存屏障是没有必要使用的（前提是不考虑编译器优化的情况下）。
+运行时，CPU本身是会乱序执行指令的。早期的处理器为有序处理器（in-order processors）,总是按开发者编写的顺序执行指令，如果指令的输入操作对象（input operands）不可用（通常由于需要从内存中获取），那么处理器不会转而执行那些输入操作对象可用的指令，而是等待当前输入操作对象可用。
 
-SMP架构需要内存屏障的进一步解释：从体系结构上来看，首先在**SMP架构**下，每个CPU与内存之间，都配有自己的高速缓存（Cache），以减少访问内存时的冲突
+相比之下，**乱序处理器**（`out-of-order processors`）会先处理那些有**可用输入操作对象**的指令（而**非顺序执行**）从而避免了等待，提高了效率。现代计算机上，处理器运行的速度比内存快很多，有序处理器花在等待可用数据的时间里已可处理大量指令了。
+
+即便现代处理器会**乱序执行**，但在**单个CPU上**，指令能通过**指令队列顺序获取并执行**，结果利用**队列顺序返回寄存器堆**（详情可参考 http://en.wikipedia.org/wiki/Out-of-order_execution ），这使得程序执行时所有的内存访问操作看起来像是按程序**代码编写的顺序执行**的，因此内存屏障是没有必要使用的（前提是**不考虑编译器优化**的情况下）。
+
+SMP架构需要内存屏障的进一步解释：从体系结构上来看，首先在**SMP架构**下，**每个CPU**与**内存**之间，都配有**自己的高速缓存**（Cache），以减少访问内存时的冲突
 
 ![2020-04-17-12-26-15.png](./images/2020-04-17-12-26-15.png)
 
@@ -146,7 +150,9 @@ print(x);
 
 **程序**中编排好的**内存访问顺序**（**指令序**： program ordering）是**先写入x**，**再写入y**。而实际上出现在该CPU外部，即**系统总线上的次序**（**处理器序**： processor ordering），却是**先写入y**，**再写入x**(这个例子中x还未写入)。
 
-在SMP架构中，**每个CPU**都只知道**自己何时会改变内存**的内容，但是都**不知道别的CPU**会在**什么时候改变内存**的内容，也不知道**自己本地的高速缓存**中的内容是否与**内存**中的**内容不一致**。反过来，每个CPU都可能因为改变了内存内容，而使得其他CPU的高速缓存变的不一致了。在SMP架构下，由于高速缓存的存在而导致的内存访问次序（读或写都有可能书序被改变）的改变很有可能影响到CPU间的同步与互斥。因此需要有一种手段，使得在某些操作之前，把这种“欠下”的内存操作（本例中的x=42的内存写入）全都最终地、物理地完成，就好像把欠下的债都结清，然后再开始新的（通常是比较重要的）活动一样。这种手段就是内存屏障，其本质原理就是对系统总线加锁。
+在SMP架构中，**每个CPU**都只知道**自己何时会改变内存**的内容，但是都**不知道别的CPU**会在**什么时候改变内存**的内容，也不知道**自己本地的高速缓存**中的内容是否与**内存**中的**内容不一致**。反过来，**每个CPU**都可能因为**改变了内存内容**，而使得**其他CPU的高速缓存**变的**不一致**了。
+
+在SMP架构下，由于高速缓存的存在而导致的内存访问次序（读或写都有可能书序被改变）的改变很有可能影响到**CPU间的同步与互斥**。因此需要有一种手段，使得在某些操作之前，把这种“欠下”的内存操作（本例中的x=42的内存写入）全都最终地、物理地完成，就好像把欠下的债都结清，然后再开始新的（通常是比较重要的）活动一样。这种手段就是内存屏障，其本质原理就是对系统总线加锁。
 
 回过头来, 
 
