--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -152,10 +152,40 @@ print(x);
 
 在SMP架构中，**每个CPU**都只知道**自己何时会改变内存**的内容，但是都**不知道别的CPU**会在**什么时候改变内存**的内容，也不知道**自己本地的高速缓存**中的内容是否与**内存**中的**内容不一致**。反过来，**每个CPU**都可能因为**改变了内存内容**，而使得**其他CPU的高速缓存**变的**不一致**了。
 
-在SMP架构下，由于高速缓存的存在而导致的内存访问次序（读或写都有可能书序被改变）的改变很有可能影响到**CPU间的同步与互斥**。因此需要有一种手段，使得在某些操作之前，把这种“欠下”的内存操作（本例中的x=42的内存写入）全都最终地、物理地完成，就好像把欠下的债都结清，然后再开始新的（通常是比较重要的）活动一样。这种手段就是内存屏障，其本质原理就是对系统总线加锁。
+在SMP架构下，由于**高速缓存**的存在而导致的**内存访问次序**（读或写都有可能书序被改变）的改变很有可能影响到**CPU间的同步与互斥**。因此需要有一种手段，使得在**某些操作之前**，把这种“欠下”的内存操作（本例中的**x=42的内存写入**）全都最终地、物理地完成，就好像把欠下的债都结清，然后再开始新的（通常是比较重要的）活动一样。这种手段就是内存屏障，其**本质原理**就是**对系统总线加锁**。
 
-回过头来, 
+回过头来，我们再来看看为什么**非SMP架构**（UP架构）下，运行时**内存乱序访问不存在**。在单处理器架构下，**各个进程**在**宏观**上是**并行**的，但是在**微观**上却是**串行**的，因为在同一时间点上，只有一个进程真正在运行（系统中只有一个处理器）。在这种情况下，我们再来看看上面提到的例子：
 
+![2020-04-17-15-13-04.png](./images/2020-04-17-15-13-04.png)
+
+**线程0**和**线程1**的指令都将在**CPU0**上按照指令序执行。**thread0**通过**CPU0**完成**x=42**的**高速缓存写入**后，再将**ok=1**写入内存，此后**串行**的将**thread0换出**，**thread1换入**，即使此时**x=42并未写入内存**，但由于**thread1的执行**仍然是在**CPU0**上执行，他仍然访问的是**CPU0的高速缓存**，因此，即使**x=42还未写回到内存**中，**thread1**势必还是**先从高速缓存**中读到**x=42**，再从**内存中读到ok=1**
+
+综上所述，在单CPU上，多线程执行不存在运行时内存乱序访问，我们从内核源码也可得到类似结论（代码不完全摘录）
+
+```cpp
+#define barrier() __asm__ __volatile__("": : :"memory") 
+#define mb() alternative("lock; addl $0,0(%%esp)", "mfence", X86_FEATURE_XMM2) 
+#define rmb() alternative("lock; addl $0,0(%%esp)", "lfence", X86_FEATURE_XMM2)
+#ifdef CONFIG_SMP 
+#define smp_mb() mb() 
+#define smp_rmb() rmb() 
+#define smp_wmb() wmb() 
+#define smp_read_barrier_depends() read_barrier_depends() 
+#define set_mb(var, value) do { (void) xchg(&var, value); } while (0) 
+#else 
+#define smp_mb() barrier() 
+#define smp_rmb() barrier() 
+#define smp_wmb() barrier() 
+#define smp_read_barrier_depends() do { } while(0) 
+#define set_mb(var, value) do { var = value; barrier(); } while (0) 
+#endif
+```
+
+这里可看到对内存屏障的定义，如果是**SMP架构**，`smp_mb`定义为`mb()`，mb()为**CPU内存屏障**（接下来要谈的），而**非SMP架构**时（也就是UP架构），直接使用**编译器屏障**，**运行时内存乱序访问并不存在**。
+
+为什么**多CPU**情况下会存在**内存乱序访问**？我们知道**每个CPU都存在Cache**，当一个特定数据**第一次**被**其他CPU获取**时，此数据显然**不在其他CPU的Cache**中（这就是Cache Miss）。这意味着CPU要从内存中获取数据（这个过程需要CPU等待数百个周期），此数据将被加载到CPU的Cache中，这样后续就能直接从Cache上快速访问。当某个CPU进行写操作时，他必须确保其他CPU已将此数据从他们的Cache中移除（以便保证一致性），只有在移除操作完成后，此CPU才能安全地修改数据。显然，存在多个Cache时，必须通过一个Cache一致性协议来避免数据不一致的问题，而这个通信的过程就可能导致乱序访问的出现，也就是运行时内存乱序访问。受篇幅所限，这里不再深入讨论整个细节，有兴趣的读者可以研究《Memory Barriers: a Hardware View for Software Hackers》这边文章，它详细地分析了整个过程。
+
+现在通过一个例子来直观地说明多CPU下内存乱序访问的问题：
 
 # 参考
 
