--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -183,9 +183,79 @@ print(x);
 
 这里可看到对内存屏障的定义，如果是**SMP架构**，`smp_mb`定义为`mb()`，mb()为**CPU内存屏障**（接下来要谈的），而**非SMP架构**时（也就是UP架构），直接使用**编译器屏障**，**运行时内存乱序访问并不存在**。
 
-为什么**多CPU**情况下会存在**内存乱序访问**？我们知道**每个CPU都存在Cache**，当一个特定数据**第一次**被**其他CPU获取**时，此数据显然**不在其他CPU的Cache**中（这就是Cache Miss）。这意味着CPU要从内存中获取数据（这个过程需要CPU等待数百个周期），此数据将被加载到CPU的Cache中，这样后续就能直接从Cache上快速访问。当某个CPU进行写操作时，他必须确保其他CPU已将此数据从他们的Cache中移除（以便保证一致性），只有在移除操作完成后，此CPU才能安全地修改数据。显然，存在多个Cache时，必须通过一个Cache一致性协议来避免数据不一致的问题，而这个通信的过程就可能导致乱序访问的出现，也就是运行时内存乱序访问。受篇幅所限，这里不再深入讨论整个细节，有兴趣的读者可以研究《Memory Barriers: a Hardware View for Software Hackers》这边文章，它详细地分析了整个过程。
+为什么**多CPU**情况下会存在**内存乱序访问**？我们知道**每个CPU都存在Cache**，当一个特定数据**第一次**被**其他CPU获取**时，此数据显然**不在其他CPU的Cache**中（这就是`Cache Miss`）。这意味着CPU要从**内存中获取数据**（这个过程需要CPU等待数百个周期），此数据将**被加载到CPU的Cache**中，这样后续就能**直接从Cache上快速访问**。当**某个CPU进行写操作**时，他**必须**确保**其他CPU**已将**此数据从他们的Cache中移除**（以便保证一致性），只有在**移除操作完成后**，此CPU才能安全地**修改数据**。显然，存在**多个Cache**时，必须通过一个**Cache一致性协议**来避免数据不一致的问题，而**这个通信的过程**就可能导致**乱序访问的出现**，也就是**运行时内存乱序访问**。受篇幅所限，这里不再深入讨论整个细节，有兴趣的读者可以研究《Memory Barriers: a Hardware View for Software Hackers》这边文章，它详细地分析了整个过程。
 
 现在通过一个例子来直观地说明多CPU下内存乱序访问的问题：
+
+```cpp
+volatile int x, y, r1, r2;
+//thread 1
+void run1()
+{
+    x = 1;
+    r1 = y;
+}
+//thread 2
+void run2
+{
+    y = 1;
+    r2 = x;
+}
+```
+
+变量x、y、r1、r2均被初始化为0，**run1**和**run2**运行在**不同的线程**中。如果run1和run2在**同一个cpu**下执行完成，那么就如我们所料，**r1和r2**的值**不会同时为0**，而假如run1和run2在**不同的CPU**下执行完成后，由于存在**内存乱序访问**的可能，这时**r1和r2可能同时为0**。
+
+我们可以使用CPU内存屏障来避免**运行时内存乱序访问**(`x86_64`)：
+
+
+```cpp
+void run1()
+{
+    x = 1;
+    //CPU内存屏障，保证x=1在r1=y之前执行
+    __asm__ __volatile__("mfence":::"memory");
+    r1 = y;
+}
+//thread 2
+void run2
+{
+    y = 1;
+    //CPU内存屏障，保证y = 1在r2 = x之前执行
+    __asm__ __volatile__("mfence":::"memory");
+    r2 = x;
+}
+```
+
+这里mfence的含义是什么？
+
+x86/64系统架构提供了**三种内存屏障指令**：(1) sfence; (2) lfence; (3) mfence。（参考介绍：http://peeterjoot.wordpress.com/2009/12/04/intel-memory-ordering-fence-instructions-and-atomic-operations/ 以及Intel文档：http://www.intel.com/content/dam/www/public/us/en/documents/manuals/64-ia-32-architectures-software-developer-vol-3a-part-1-manual.pdf 和 http://www.intel.com/content/www/us/en/processors/architectures-software-developer-manuals.html）
+
+1. sfence
+
+Performs a serializing operation on all store-to-memory instructions that were issued prior the SFENCE instruction. This serializing operation guarantees that every store instruction that precedes in program order the SFENCE instruction is globally visible before any store instruction that follows the SFENCE instruction is globally visible. The SFENCE instruction is ordered with respect store instructions, other SFENCE instructions, any MFENCE instructions, and any serializing instructions (such as the CPUID instruction). It is not ordered with respect to load instructions or the LFENCE instruction.
+
+也就是说sfence确保：sfence指令前后的**写入**(store/release)指令，按照在sfence前后的指令序进行执行。写内存屏障提供这样的保证: 所有出现在屏障**之前的STORE操作**都将先于所有出现在屏障**之后的STORE操作**被系统中的**其他组件所感知**.
+
+[!] 注意, 写屏障一般需要与读屏障或数据依赖屏障配对使用; 参阅”SMP内存屏障配对”章节. (译注: 因为写屏障只保证自己提交的顺序, 而无法干预其他代码读内存的顺序. 所以配对使用很重要. 其他类型的屏障亦是同理.)
+
+2. lfence
+
+Performs a serializing operation on all load-from-memory instructions that were issued prior the LFENCE instruction. This serializing operation guarantees that every load instruction that precedes in program order the LFENCE instruction is globally visible before any load instruction that follows the LFENCE instruction is globally visible. The LFENCE instruction is ordered with respect to load instructions, other LFENCE instructions, any MFENCE instructions, and any serializing instructions (such as the CPUID instruction). It is not ordered with respect to store instructions or the SFENCE instruction.
+
+也就是说lfence确保：lfence指令前后的读取(load/acquire)指令，按照在mfence前后的指令序进行执行。读屏障包含数据依赖屏障的功能, 并且保证所有出现在屏障之前的LOAD操作都将先于所有出现在屏障之后的LOAD操作被系统中的其他组件所感知.
+
+[!] 注意, 读屏障一般要跟写屏障配对使用; 参阅”SMP内存屏障的配对使用”章节.
+
+3. mfence
+
+Performs a serializing operation on all load-from-memory and store-to-memory instructions that were issued prior the MFENCE instruction. This serializing operation guarantees that every load and store instruction that precedes in program order the MFENCE instruction is globally visible before any load or store instruction that follows the MFENCE instruction is globally visible. The MFENCE instruction is ordered with respect to all load and store instructions, other MFENCE instructions, any SFENCE and LFENCE instructions, and any serializing instructions (such as the CPUID instruction).
+
+也就是说mfence指令：确保所有mfence指令之前的写入(store/release)指令，都在该mfence指令之后的写入（store/release）指令之前（指令序，Program Order）执行；同时，他还确保所有mfence指令之后的读取（load/acquire）指令，都在该mfence指令之前的读取（load/acquire）指令之后执行。即：既确保写者能够按照指令序完成数据写入，也确保读者能够按照指令序完成数据读取。通用内存屏障保证所有出现在屏障之前的LOAD和STORE操作都将先于所有出现在屏障之后的LOAD和STORE操作被系统中的其他组件所感知.
+
+sfence我认为其动作，可以看做是一定将数据写回内存，而不是写到高速缓存中。lfence的动作，可以看做是一定将数据从高速缓存中抹掉，从内存中读出来，而不是直接从高速缓存中读出来。mfence则正好结合了两项操作。sfence只确保写者在将数据（A->B）写入内存的顺序，并不确保其他人读(A,B)数据时，一定是按照先读A更新后的数据，再读B更新后的数据这样的顺序，很有可能读者读到的顺序是A旧数据，B更新后的数据，A更新后的数据（只是这个更新后的数据出现在读者的后面，他并没有“实际”去读）；同理，lfence也就只能确保读者在读入顺序时，按照先读A最新的在内存中的数据，再读B最新的在内存中的数据的顺序，但如果没有写者sfence的配合，显然，即使顺序一致，内容还是有可能乱序。
+
+为什么仅通过保证了写者的写入顺序(sfence), 还是有可能有问题？还是之前的例子
+
 
 # 参考
 
