--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -236,13 +236,13 @@ Performs a serializing operation on all store-to-memory instructions that were i
 
 也就是说sfence确保：sfence指令前后的**写入**(store/release)指令，按照在sfence前后的指令序进行执行。写内存屏障提供这样的保证: 所有出现在屏障**之前的STORE操作**都将先于所有出现在屏障**之后的STORE操作**被系统中的**其他组件所感知**.
 
-[!] 注意, 写屏障一般需要与读屏障或数据依赖屏障配对使用; 参阅”SMP内存屏障配对”章节. (译注: 因为写屏障只保证自己提交的顺序, 而无法干预其他代码读内存的顺序. 所以配对使用很重要. 其他类型的屏障亦是同理.)
+注意, 写屏障一般需要与读屏障或数据依赖屏障配对使用; 参阅”SMP内存屏障配对”章节. (译注: 因为写屏障只保证自己提交的顺序, 而无法干预其他代码读内存的顺序. 所以配对使用很重要. 其他类型的屏障亦是同理.)
 
 2. lfence
 
 Performs a serializing operation on all load-from-memory instructions that were issued prior the LFENCE instruction. This serializing operation guarantees that every load instruction that precedes in program order the LFENCE instruction is globally visible before any load instruction that follows the LFENCE instruction is globally visible. The LFENCE instruction is ordered with respect to load instructions, other LFENCE instructions, any MFENCE instructions, and any serializing instructions (such as the CPUID instruction). It is not ordered with respect to store instructions or the SFENCE instruction.
 
-也就是说lfence确保：lfence指令前后的读取(load/acquire)指令，按照在mfence前后的指令序进行执行。读屏障包含数据依赖屏障的功能, 并且保证所有出现在屏障之前的LOAD操作都将先于所有出现在屏障之后的LOAD操作被系统中的其他组件所感知.
+也就是说lfence确保：lfence指令前后的**读取**(load/acquire)指令，按照在mfence前后的指令序进行执行。读屏障包含数据依赖屏障的功能, 并且保证所有出现在屏障之前的LOAD操作都将先于所有出现在屏障之后的LOAD操作被系统中的其他组件所感知.
 
 [!] 注意, 读屏障一般要跟写屏障配对使用; 参阅”SMP内存屏障的配对使用”章节.
 
@@ -250,12 +250,37 @@ Performs a serializing operation on all load-from-memory instructions that were 
 
 Performs a serializing operation on all load-from-memory and store-to-memory instructions that were issued prior the MFENCE instruction. This serializing operation guarantees that every load and store instruction that precedes in program order the MFENCE instruction is globally visible before any load or store instruction that follows the MFENCE instruction is globally visible. The MFENCE instruction is ordered with respect to all load and store instructions, other MFENCE instructions, any SFENCE and LFENCE instructions, and any serializing instructions (such as the CPUID instruction).
 
-也就是说mfence指令：确保所有mfence指令之前的写入(store/release)指令，都在该mfence指令之后的写入（store/release）指令之前（指令序，Program Order）执行；同时，他还确保所有mfence指令之后的读取（load/acquire）指令，都在该mfence指令之前的读取（load/acquire）指令之后执行。即：既确保写者能够按照指令序完成数据写入，也确保读者能够按照指令序完成数据读取。通用内存屏障保证所有出现在屏障之前的LOAD和STORE操作都将先于所有出现在屏障之后的LOAD和STORE操作被系统中的其他组件所感知.
+也就是说mfence指令：确保所有mfence指令之前的**写入**(store/release)指令，都在该mfence指令之后的写入（store/release）指令之前（指令序，Program Order）执行；同时，他还确保所有mfence指令之后的**读取**（load/acquire）指令，都在该mfence指令之前的读取（load/acquire）指令之后执行。即：既确保**写者**能够按照**指令序完成数据写入**，也确保**读者**能够按照**指令序**完成**数据读取**。通用内存屏障保证所有出现在屏障之前的LOAD和STORE操作都将先于所有出现在屏障之后的LOAD和STORE操作被系统中的其他组件所感知.
 
-sfence我认为其动作，可以看做是一定将数据写回内存，而不是写到高速缓存中。lfence的动作，可以看做是一定将数据从高速缓存中抹掉，从内存中读出来，而不是直接从高速缓存中读出来。mfence则正好结合了两项操作。sfence只确保写者在将数据（A->B）写入内存的顺序，并不确保其他人读(A,B)数据时，一定是按照先读A更新后的数据，再读B更新后的数据这样的顺序，很有可能读者读到的顺序是A旧数据，B更新后的数据，A更新后的数据（只是这个更新后的数据出现在读者的后面，他并没有“实际”去读）；同理，lfence也就只能确保读者在读入顺序时，按照先读A最新的在内存中的数据，再读B最新的在内存中的数据的顺序，但如果没有写者sfence的配合，显然，即使顺序一致，内容还是有可能乱序。
+**sfence**我认为其动作，可以看做是**一定将数据写回内存**，而**不是写到高速缓存**中。**lfence**的动作，可以看做是**一定将数据从高速缓存中抹掉**，从**内存中读出来**，而**不是直接从高速缓存**中读出来。mfence则正好结合了两项操作。**sfence**只确保**写者**在将**数据（A->B）写入内存的顺序**，并**不确保其他人读(A,B)数据**时，一定是按照**先读A**更新后的数据，**再读B**更新后的数据这样的顺序，很有可能读者读到的顺序是**A旧数据**，**B更新后的数据**，**A更新后的数据**（只是这个更新后的数据出现在读者的后面，他并**没有“实际”去读**）；同理，**lfence**也就只能确保**读者在读入顺序**时，按照**先读A最新的在内存中的数据**，再读**B最新的在内存中的数据的顺序**，但如果没有写者sfence的配合，显然，即使顺序一致，内容还是有可能乱序。
 
-为什么仅通过保证了写者的写入顺序(sfence), 还是有可能有问题？还是之前的例子
+为什么仅通过保证了**写者的写入顺序**(sfence), 还是有可能有问题？还是之前的例子
 
+```cpp
+void run1()
+{
+    x = 1;
+    //CPU内存屏障，保证x=1在r1=y之前执行
+    __asm__ __volatile__("sfence":::"memory");
+    r1 = y;
+}
+//thread 2
+void run2
+{
+    y = 1;
+    //CPU内存屏障，保证y = 1在r2 = x之前执行
+    __asm__ __volatile__("sfence":::"memory");
+    r2 = x;
+}
+```
+
+如果仅仅是对“写入”操作进行顺序化，实际上，还是有可能使的上面的代码出现r1，r2同时为0（初始值）的场景：
+
+![2020-04-17-15-36-33.png](./images/2020-04-17-15-36-33.png)
+
+当CPU0上的thread0执行时，x被先行写回到内存中，但如果此时y在CPU0的高速缓存中，这时y从缓存中读出，并被赋予r1写回内存，此时r1为0。同理，CPU1上的thread1执行时，y被先行写回到内存中，如果此时x在CPU1的高速缓存中存在，则此时r2被赋予了x的（过时）值0，同样存在了r1, r2同时为0。这个现象实际上就是所谓的r1=y的读顺序与x=1的写顺序存在逻辑上的乱序所致（或者是r2 = x与y=1存在乱序） – 读操作与写操作之间存在乱序。而mfence就是将这类乱序也屏蔽掉
+
+如果是通过mfence，是怎样解决该问题的呢？
 
 # 参考
 
