--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -278,9 +278,13 @@ void run2
 
 ![2020-04-17-15-36-33.png](./images/2020-04-17-15-36-33.png)
 
-当CPU0上的thread0执行时，x被先行写回到内存中，但如果此时y在CPU0的高速缓存中，这时y从缓存中读出，并被赋予r1写回内存，此时r1为0。同理，CPU1上的thread1执行时，y被先行写回到内存中，如果此时x在CPU1的高速缓存中存在，则此时r2被赋予了x的（过时）值0，同样存在了r1, r2同时为0。这个现象实际上就是所谓的r1=y的读顺序与x=1的写顺序存在逻辑上的乱序所致（或者是r2 = x与y=1存在乱序） – 读操作与写操作之间存在乱序。而mfence就是将这类乱序也屏蔽掉
+当**CPU0**上的**thread0**执行时，**x被先行写回到内存**中，但如果此时**y在CPU0的高速缓存**中，这时**y从缓存中读出**，并**被赋予r1写回内存**，此时**r1为0**。同理，**CPU1**上的**thread1**执行时，**y被先行写回到内存**中，如果此时**x在CPU1的高速缓存**中存在，则此时**r2被赋予了x的（过时）值0**，同样存在了r1, r2同时为0。这个现象实际上就是所谓的**r1=y**的**读顺序**与**x=1**的**写顺序**存在**逻辑上的乱序所致**（或者是**r2 = x**与**y=1**存在乱序） – **读操作**与**写操作**之间存在**乱序**。而mfence就是将这类乱序也屏蔽掉
 
 如果是通过mfence，是怎样解决该问题的呢？
+
+![2020-04-17-15-43-47.png](./images/2020-04-17-15-43-47.png)
+
+当thread1在CPU0上对x=1进行写入时，**x=1被刷新到内存**中，由于是**mfence**，他要求**r1的读取操作**从**内存读取**数据，而**不是从缓存中读取**数据，因此，此时如果**y更新为1**，则**r1 = 1**; 如果**y没有更新为1**，则**r1 = 0**， 同时此时由于x更新为1， r2必须从内存中读取数据，则此时r2 = 1。总而言之是r1, r2, 一个=0， 一个=1。
 
 # 参考
 
