--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -183,9 +183,9 @@ print(x);
 
 这里可看到对内存屏障的定义，如果是**SMP架构**，`smp_mb`定义为`mb()`，mb()为**CPU内存屏障**（接下来要谈的），而**非SMP架构**时（也就是UP架构），直接使用**编译器屏障**，**运行时内存乱序访问并不存在**。
 
-为什么**多CPU**情况下会存在**内存乱序访问**？我们知道**每个CPU都存在Cache**，当一个特定数据**第一次**被**其他CPU获取**时，此数据显然**不在其他CPU的Cache**中（这就是`Cache Miss`）。这意味着CPU要从**内存中获取数据**（这个过程需要CPU等待数百个周期），此数据将**被加载到CPU的Cache**中，这样后续就能**直接从Cache上快速访问**。当**某个CPU进行写操作**时，他**必须**确保**其他CPU**已将**此数据从他们的Cache中移除**（以便保证一致性），只有在**移除操作完成后**，此CPU才能安全地**修改数据**。显然，存在**多个Cache**时，必须通过一个**Cache一致性协议**来避免数据不一致的问题，而**这个通信的过程**就可能导致**乱序访问的出现**，也就是**运行时内存乱序访问**。受篇幅所限，这里不再深入讨论整个细节，有兴趣的读者可以研究《Memory Barriers: a Hardware View for Software Hackers》这边文章，它详细地分析了整个过程。
+为什么**多CPU**情况下会存在**内存乱序访问**？我们知道**每个CPU都存在Cache**，当一个特定数据**第一次**被**其他CPU获取**时，此数据显然**不在其他CPU的Cache**中（这就是`Cache Miss`）。这意味着CPU要从**内存中获取数据**（这个过程需要CPU等待数百个周期），此数据将**被加载到CPU的Cache**中，这样后续就能**直接从Cache上快速访问**。当**某个CPU进行写操作**时，他**必须**确保**其他CPU**已将**此数据从他们的Cache中移除**（以便保证一致性），只有在**移除操作完成后**，此CPU才能安全地**修改数据**。显然，存在**多个Cache**时，必须通过一个**Cache一致性协议！！！** 来避免数据不一致的问题，而**这个通信的过程！！！** 就可能导致**乱序访问的出现**，也就是**运行时内存乱序访问**。受篇幅所限，这里不再深入讨论整个细节，有兴趣的读者可以研究《Memory Barriers: a Hardware View for Software Hackers》这边文章，它详细地分析了整个过程。
 
-现在通过一个例子来直观地说明多CPU下内存乱序访问的问题：
+现在通过一个例子来直观地说明**多CPU下内存乱序访问**的问题：
 
 ```cpp
 volatile int x, y, r1, r2;
@@ -206,7 +206,6 @@ void run2
 变量x、y、r1、r2均被初始化为0，**run1**和**run2**运行在**不同的线程**中。如果run1和run2在**同一个cpu**下执行完成，那么就如我们所料，**r1和r2**的值**不会同时为0**，而假如run1和run2在**不同的CPU**下执行完成后，由于存在**内存乱序访问**的可能，这时**r1和r2可能同时为0**。
 
 我们可以使用CPU内存屏障来避免**运行时内存乱序访问**(`x86_64`)：
-
 
 ```cpp
 void run1()
