--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -205,7 +205,7 @@ void run2
 
 变量x、y、r1、r2均被初始化为0，**run1**和**run2**运行在**不同的线程**中。如果run1和run2在**同一个cpu**下执行完成，那么就如我们所料，**r1和r2**的值**不会同时为0**，而假如run1和run2在**不同的CPU**下执行完成后，由于存在**内存乱序访问**的可能，这时**r1和r2可能同时为0**。
 
-我们可以使用CPU内存屏障来避免**运行时内存乱序访问**(`x86_64`)：
+我们可以使用**CPU内存屏障**来避免**运行时内存乱序访问**(`x86_64`)：
 
 ```cpp
 void run1()
@@ -233,7 +233,7 @@ x86/64系统架构提供了**三种内存屏障指令**：(1) sfence; (2) lfence
 
 Performs a serializing operation on all store-to-memory instructions that were issued prior the SFENCE instruction. This serializing operation guarantees that every store instruction that precedes in program order the SFENCE instruction is globally visible before any store instruction that follows the SFENCE instruction is globally visible. The SFENCE instruction is ordered with respect store instructions, other SFENCE instructions, any MFENCE instructions, and any serializing instructions (such as the CPUID instruction). It is not ordered with respect to load instructions or the LFENCE instruction.
 
-也就是说sfence确保：sfence指令前后的**写入**(store/release)指令，按照在sfence前后的指令序进行执行。写内存屏障提供这样的保证: 所有出现在屏障**之前的STORE操作**都将先于所有出现在屏障**之后的STORE操作**被系统中的**其他组件所感知**.
+也就是说sfence确保：sfence**指令前后**的**写入**(store/release)指令，按照在**sfence前后的指令序进行执行**。**写内存屏障**提供这样的保证: 所有出现在屏障**之前的STORE操作**都将先于所有出现在屏障**之后的STORE操作**被系统中的**其他组件所感知**.
 
 注意, 写屏障一般需要与读屏障或数据依赖屏障配对使用; 参阅”SMP内存屏障配对”章节. (译注: 因为写屏障只保证自己提交的顺序, 而无法干预其他代码读内存的顺序. 所以配对使用很重要. 其他类型的屏障亦是同理.)
 
@@ -241,7 +241,7 @@ Performs a serializing operation on all store-to-memory instructions that were i
 
 Performs a serializing operation on all load-from-memory instructions that were issued prior the LFENCE instruction. This serializing operation guarantees that every load instruction that precedes in program order the LFENCE instruction is globally visible before any load instruction that follows the LFENCE instruction is globally visible. The LFENCE instruction is ordered with respect to load instructions, other LFENCE instructions, any MFENCE instructions, and any serializing instructions (such as the CPUID instruction). It is not ordered with respect to store instructions or the SFENCE instruction.
 
-也就是说lfence确保：lfence指令前后的**读取**(load/acquire)指令，按照在mfence前后的指令序进行执行。读屏障包含数据依赖屏障的功能, 并且保证所有出现在屏障之前的LOAD操作都将先于所有出现在屏障之后的LOAD操作被系统中的其他组件所感知.
+也就是说lfence确保：lfence**指令前后**的**读取**(load/acquire)指令，按照在mfence前后的指令序进行执行。读屏障包含数据依赖屏障的功能, 并且保证所有出现在屏障之前的LOAD操作都将先于所有出现在屏障之后的LOAD操作被系统中的其他组件所感知.
 
 [!] 注意, 读屏障一般要跟写屏障配对使用; 参阅”SMP内存屏障的配对使用”章节.
 
@@ -249,7 +249,7 @@ Performs a serializing operation on all load-from-memory instructions that were 
 
 Performs a serializing operation on all load-from-memory and store-to-memory instructions that were issued prior the MFENCE instruction. This serializing operation guarantees that every load and store instruction that precedes in program order the MFENCE instruction is globally visible before any load or store instruction that follows the MFENCE instruction is globally visible. The MFENCE instruction is ordered with respect to all load and store instructions, other MFENCE instructions, any SFENCE and LFENCE instructions, and any serializing instructions (such as the CPUID instruction).
 
-也就是说mfence指令：确保所有mfence指令之前的**写入**(store/release)指令，都在该mfence指令之后的写入（store/release）指令之前（指令序，Program Order）执行；同时，他还确保所有mfence指令之后的**读取**（load/acquire）指令，都在该mfence指令之前的读取（load/acquire）指令之后执行。即：既确保**写者**能够按照**指令序完成数据写入**，也确保**读者**能够按照**指令序**完成**数据读取**。通用内存屏障保证所有出现在屏障之前的LOAD和STORE操作都将先于所有出现在屏障之后的LOAD和STORE操作被系统中的其他组件所感知.
+也就是说mfence指令：确保所有mfence指令之前的**写入**(store/release)指令，都在**该mfence指令之后的写入**（store/release）指令**之前**（指令序，Program Order）执行；同时，他还确保所有mfence指令之后的**读取**（load/acquire）指令，都在该mfence指令之前的读取（load/acquire）指令之后执行。即：既确保**写者**能够按照**指令序完成数据写入**，也确保**读者**能够按照**指令序**完成**数据读取**。通用内存屏障保证所有出现在屏障之前的LOAD和STORE操作都将先于所有出现在屏障之后的LOAD和STORE操作被系统中的其他组件所感知.
 
 **sfence**我认为其动作，可以看做是**一定将数据写回内存**，而**不是写到高速缓存**中。**lfence**的动作，可以看做是**一定将数据从高速缓存中抹掉**，从**内存中读出来**，而**不是直接从高速缓存**中读出来。mfence则正好结合了两项操作。**sfence**只确保**写者**在将**数据（A->B）写入内存的顺序**，并**不确保其他人读(A,B)数据**时，一定是按照**先读A**更新后的数据，**再读B**更新后的数据这样的顺序，很有可能读者读到的顺序是**A旧数据**，**B更新后的数据**，**A更新后的数据**（只是这个更新后的数据出现在读者的后面，他并**没有“实际”去读**）；同理，**lfence**也就只能确保**读者在读入顺序**时，按照**先读A最新的在内存中的数据**，再读**B最新的在内存中的数据的顺序**，但如果没有写者sfence的配合，显然，即使顺序一致，内容还是有可能乱序。
 
