--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -286,6 +286,24 @@ void run2
 
 当thread1在CPU0上对x=1进行写入时，**x=1被刷新到内存**中，由于是**mfence**，他要求**r1的读取操作**从**内存读取**数据，而**不是从缓存中读取**数据，因此，此时如果**y更新为1**，则**r1 = 1**; 如果**y没有更新为1**，则**r1 = 0**， 同时此时由于x更新为1， r2必须从内存中读取数据，则此时r2 = 1。总而言之是r1, r2, 一个=0， 一个=1。
 
+# 关于内存屏障的一些补充
+
+在实际的应用程序开发中，开发者可能完全不知道内存屏障就写出了正确的多线程程序，这主要是因为各种同步机制中已隐含了内存屏障（但和实际的内存屏障有细微差别），使得不直接使用内存屏障也不会存在任何问题。但如果你希望编写诸如**无锁数据结构**，那么内存屏障意义重大。
+
+在Linux内核中，除了前面说到的编译器屏障—barrier()和ACESS_ONCE()，还有CPU内存屏障：
+
+* 通用屏障，保证读写操作有序，包括mb()和smp_mb();
+* 写操作屏障，仅保证写操作有序，包括wmb()和smp_wmb();
+* 读操作屏障，仅保证读操作有序，包括rmb()和smp_rmb();
+
+注意，所有的CPU内存屏障（除了数据依赖屏障外）都隐含了编译器屏障（也就是使用CPU内存屏障后就无需再额外添加编译器屏障了）。这里的smp开通的内存屏障会根据配置在**单处理器**上直接使用**编译器屏障**，而在**SMP**上才使用**CPU内存屏障**（即mb()、wmb()、rmb()）。
+
+还需要注意一点是，**CPU内存屏障**中某些类型的屏障需要成对使用，否则会出错，详细来说就是：一个写操作屏障需要和读操作（或者数据依赖）屏障一起使用（当然，通用屏障也是可以的），反之亦然。
+
+通常，我们是希望在写屏障之前出现的STORE操作总是匹配度屏障或者数据依赖屏障之后出现的LOAD操作。以之前的代码示例为例：
+
+
+
 # 参考
 
 http://lday.me/2017/11/04/0016_what_is_memory_barriers/
