--- Auto-Git Commit ---

--- a/Linux/Sync/内存屏障/什么是内存屏障.md
+++ b/Linux/Sync/内存屏障/什么是内存屏障.md
@@ -290,7 +290,7 @@ void run2
 
 在实际的应用程序开发中，开发者可能完全不知道内存屏障就写出了正确的多线程程序，这主要是因为各种同步机制中已隐含了内存屏障（但和实际的内存屏障有细微差别），使得不直接使用内存屏障也不会存在任何问题。但如果你希望编写诸如**无锁数据结构**，那么内存屏障意义重大。
 
-在Linux内核中，除了前面说到的编译器屏障—barrier()和ACESS_ONCE()，还有CPU内存屏障：
+在Linux内核中，除了前面说到的**编译器屏障**`—barrier()`和`ACESS_ONCE()`，还有CPU内存屏障：
 
 * 通用屏障，保证读写操作有序，包括mb()和smp_mb();
 * 写操作屏障，仅保证写操作有序，包括wmb()和smp_wmb();
