--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -477,7 +477,7 @@ struct kvm_mmu_page {
         union kvm_mmu_page_role role;
         // 在直接映射中存储线性地址的基地址；在非直接映射中存储guest page table，该PT包含了由该页映射的translation。非直接映射不常见
         gfn_t gfn;
-        // 指向影子页表页地址，页中被分为多个spte。影子页表用的页面称为shadow page，一个页面中分为多个表项，每个表项称为spte，注意不论哪个级别，表项都称为spte
+        // 指向影子页表页地址，HPA, 页中被分为多个spte。影子页表用的页面称为shadow page，一个页面中分为多个表项，每个表项称为spte，注意不论哪个级别，表项都称为spte
         // 该域可以指向一个lower-level shadow pages，也可以指向真正的数据page。
         u64 *spt;
         /* hold the gfn of each spte inside spt */
