--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -900,6 +900,8 @@ static int mmu_alloc_direct_roots(struct kvm_vcpu *vcpu)
                                 vcpu->arch.mmu->shadow_root_level, 1, ACC_ALL);
                 ++sp->root_count;
                 spin_unlock(&vcpu->kvm->mmu_lock);
+                // root_hpa是影子页表level4页表页物理地址, 即EPTP
+                // sp->spt指向影子页表页的地址
                 vcpu->arch.mmu->root_hpa = __pa(sp->spt);
         } else if (vcpu->arch.mmu->shadow_root_level == PT32E_ROOT_LEVEL) {
                 for (i = 0; i < 4; ++i) {
