--- a/Virtualization/QEMU/4. 内存虚拟化/1. 基本原理.md
+++ b/Virtualization/QEMU/4. 内存虚拟化/1. 基本原理.md
@@ -15,11 +15,8 @@
 
 **内存虚拟化**就是**为虚拟机提供内存**，使得虚拟机能够像在物理机上正常工作，这需要虚拟化软件为虚拟机展示一种物理内存的假象，内存虚拟化是虚拟化技术中关键技术之一。
 
-qemu\+kvm的虚拟化方案中，内存虚拟化是由qemu和kvm共同完成的。qemu的虚拟地址作为guest的物理地址，一句看似轻描淡写的话幕后的工作确实非常多，加上qemu本身可以独立于kvm，成为一个完整的虚拟化方案，所以其内存虚拟化更加复杂。本文试图全方位的对qemu的内存虚拟化方案进行源码层面的介绍。本文主要介绍qemu在内存虚拟化方面的工作,之后的文章会介绍内存kvm方面的内存虚拟化。
 
-QEMU在虚拟机启动的初始化阶段，为客户机分配了物理内存，那么客户机的物理内存如何工作呢？
-
-在虚拟机启动时, 由qemu在qemu的进程地址空间申请内存, 即内存的申请是在用户空间完成的.
+在虚拟机启动时, 由qemu在qemu的进程地址空间申请内存, 即内存的申请是在用户空间完成的, 申请的是主机虚拟地址空间, 而这个空间就作为虚拟机物理内存.
 
 通过kvm提供的API, 把地址信息注册到KVM中, 这样KVM中维护有虚拟机相关的slot, 这些slot构成一个完整的虚拟机物理地址空间. slot中记录其对应的HVA、页面数、起始GPA等, 利用它可以将一个GPA转化为HVA, 
 
