--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. 内存虚拟化/1. 基本原理.md
+++ b/Virtualization/QEMU/4. 内存虚拟化/1. 基本原理.md
@@ -3,6 +3,7 @@
 
 <!-- code_chunk_output -->
 
+- [基本概述](#基本概述)
 - [1. 相关配置参数](#1-相关配置参数)
 - [2. 可热插拔的guest内存](#2-可热插拔的guest内存)
 - [3. 真实内存资源Memory backends](#3-真实内存资源memory-backends)
@@ -13,14 +14,16 @@
 
 <!-- /code_chunk_output -->
 
-**内存虚拟化**就是**为虚拟机提供内存**，使得虚拟机能够像在物理机上正常工作，这需要虚拟化软件为虚拟机展示一种物理内存的假象，内存虚拟化是虚拟化技术中关键技术之一。
+# 基本概述
 
+在**虚拟机启动**时, 由qemu在**qemu的进程地址空间申请内存**, 即**内存的申请**是在**用户空间**完成的, 申请的是**主机虚拟地址空间**, 而这个空间就作为**虚拟机物理内存**.
 
-在虚拟机启动时, 由qemu在qemu的进程地址空间申请内存, 即内存的申请是在用户空间完成的, 申请的是主机虚拟地址空间, 而这个空间就作为虚拟机物理内存.
+通过**kvm提供的API**, 把**地址信息注册到KVM**中, 这样KVM中维护有**虚拟机相关的slot**, **所有这些slot**构成一个**完整的虚拟机物理地址空间**. slot中记录其对应的HVA、页面数、起始GPA等, 利用它可以将一个GPA转化为HVA.
 
-通过kvm提供的API, 把地址信息注册到KVM中, 这样KVM中维护有虚拟机相关的slot, 这些slot构成一个完整的虚拟机物理地址空间. slot中记录其对应的HVA、页面数、起始GPA等, 利用它可以将一个GPA转化为HVA, 
+整个内存虚拟化可以分为两部分: qemu部分和kvm部分.
 
-本篇文档，为大家介绍客户机物理内存的工作原理、相关数据结构，但不会涉及其实现细节，客户机物理内存的实现细节，会在后面的代码分析中讲述。
+- QEMU完成内存的申请
+- KVM实现内存的管理
 
 # 1. 相关配置参数
 
