--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -35,6 +35,8 @@ KVM在还**没有EPT硬件支持**的时候，采用的是**影子页表**（sha
 
 一个`struct kvm`代表一个虚拟机, memslots是该虚拟机所有内存条, 注意最大`KVM_ADDRESS_SPACE_NUM`(这里是1), 用于将**GPA转换为HVA**. 
 
+**一个虚拟机的所有slot(即kvm->memslots)构成完整的虚拟机物理地址空间**.
+
 ```cpp
 /*
  * Note:
@@ -121,9 +123,11 @@ struct kvm_memory_slot {
 
 众所周知，**KVM虚拟机**运行在**qemu的进程地址空间**中，所以其实**虚拟机使用的物理地址**是从对应**qemu进程的地址空间中分配**的。
 
-**虚拟机物理内存！！！** 被分成若干个`kvm_memory_slot`，**每个memslot**是**不能重叠**的，也就是说**每一段内存区间**都必须有**独立的作用**。一般来说**Qemu**会对**RAM**、**IO memory**、**High memory**等**分别注册若干个memslot**
+**虚拟机物理内存！！！** 被分成若干个`kvm_memory_slot`，**每个memslot**是**不能重叠**的，也就是说**每一段内存区间**都必须有**独立的作用**。一般来说**Qemu**会对**RAM**、**IO memory**、**High memory**等**分别注册若干个memslot**.
 
-而**每个虚拟机**的**物理内存**由**多个slot**组成，**每个slot**对应一个`kvm_memory_slot`结构，从结构体的字段可以看出，该结构记录**slot映射**的是**哪些客户物理page**，由于**映射多个页面**，所以有一个`ditty_bitmap`来标识**各个页的状态**，注意这个页是客户机的虚拟page。映射架构如下：
+**一个虚拟机的所有slot(即kvm->memslots)构成完整的虚拟机物理地址空间**.
+
+**每个虚拟机**的**物理内存**由**多个slot**组成，**每个slot**对应一个`kvm_memory_slot`结构，从结构体的字段可以看出，该结构记录**slot映射**的是**哪些客户物理page**，由于**映射多个页面**，所以有一个`ditty_bitmap`来标识**各个页的状态**，注意这个页是客户机的虚拟page。映射架构如下：
 
 ![2020-03-17-16-17-51.png](./images/2020-03-17-16-17-51.png)
 
